app/app.less
/* ... */
.rb {
    font-family: 'Roboto';
}

@font-face {
    font-family: 'Roboto Black';
    src: url('../fonts/Roboto/Roboto-Black.ttf') @ttf,
    url('fonts/Roboto/Roboto-Black.ttf') @ttf;
}

.rbB {
    font-family: 'Roboto Black';
}

@font-face {
    font-family: 'Roboto Light';
    src: url('../fonts/Roboto/Roboto-Light.ttf') @ttf,
    url('fonts/Roboto/Roboto-Light.ttf') @ttf;
}

/* Required for Angular UI Bootstrap */
.nav, .pagination, .carousel a {
    cursor: pointer;
}

.avoid-clicks {
    pointer-events: none;
}

.md-select-menu-container.md-active md-select-menu > * {
    opacity: 1;
    transition: all 0.1s cubic-bezier(0.55, 0, 0.55, 0.2);
}

div[role="button"] {
    cursor: auto;
}

.toolbar-collapse-button {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    cursor: pointer !important;
    border: 0;
    background: none;
    z-index: 1000;
    text-align: center;
    color: white;
    font-size: 12px;

    &:hover {
        color: white;
        background: rgba(80, 80, 80, 0.3);
    }

    &:focus {
        outline: none;
    }
}

.toolbar-collapse-button-grey {
    color: transparent;
}

.button-toolbar-flat-icon {
    padding-left: 2px;
    padding-right: 2px;
    height: 55px;
    width: 55px;

    span {
        font-size: 29px;
    }

    &:hover {
        span {
            font-size: 36px;
        }
    }

    &:focus {
        outline: none;
    }
}

.toolbar-time-span {
    color: white;
}

body {
    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
    min-width: @app-min-width;
    padding: 0 !important;
    overflow: hidden;
}

.view-container {

    width: 95%;
    height: 100%;
    margin-top: 15px;
    margin-left: auto;
    margin-right: auto;
}

.dark-theme {
    color: #CFD8DC !important;
}

.view-container-full {
    width: 100%;
    height: 100%;
    margin: 5px;
}

.view-container-small {
    width: 75%;
    height: 100%;
    margin-top: 15px;
    margin-left: auto;
    margin-right: auto;
}

.side-nav-title {
    padding-top: 10px;
    padding-left: 25px;
    font-size: 1.5em;
}

md-sidenav {
    background-color: inherit !important;
    color: #757575;
}

md-list.md-dark-secondary-theme {
    color: #CFD8DC;
}

.menu-item {
    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
    cursor: pointer;
    //    color: #757575;
    height: 48px;
    width: 100%;
    padding-left: 24px;

    button {
        margin-left: 24px;
        background-color: transparent;
        border-width: 0;
        display: block;
        font-size: 13px;
        font-weight: bold;
    }

    span {
        width: 27px;
        font-size: 20px;
        text-align: center;
    }

    &:hover {
        background-color: rgba(255, 255, 255, 0.1);

        span {
            //            font-size: 32px;
        }

        button {
            //            background-color: #F5F5F5;
        }
    }

    &:active {
        //        background-color: #E0E0E0;

        button {
            //            background-color: #E0E0E0;
        }
    }
}

.menu-item-indented {
    padding-left: 42px;
}

.menu-item-divider {
    height: 1px;
    border-top: 1px solid #d3d3d3;
    border-bottom: 1px solid #f4f4f4;
}

md-sidenav {

    .menu-item.active {
        background-color: #eee;
        font-weight: 700;
        color: #4285f4;
    }
}

.panel-toolbar {
    background: #283593;
    color: #fff;
    z-index: 1;
    font-size: 24px;
}

.panel-body {
    padding: 0;
}

.panel-heading {
    margin-top: 14px;
    margin-left: 16px;
    background: transparent !important;
    height: 0;
    padding: 0;
    border: 0;
    position: absolute;
    z-index: 3;
    width: 95%;
    span {
        margin-left: 32px;

    }
}

.widget-toolbar {
    min-height: 48px;
    max-height: 48px;
}

.panel-toolbar-small {
    min-height: 35px;
    max-height: 35px;
}

.panel-toolbar-medium {
    min-height: 45px;
    max-height: 45px;
}

.centered-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.md-fab-fa-icon {
    font-size: 24px;
    margin-top: 5px;
    margin-left: 2px;
}

.md-fab-fa-icon-small {
    font-size: 14px;
    //  margin-top: 0px;
    margin-left: 1px;
    min-height: 14px;
    min-width: 14px;
}

.md-button-fab-small {
    width: 38px !important;
    height: 38px !important;
}

.inactive-text-input {
    border: none;
    background-color: transparent;
}

/* After the transition this will be the only class remaining */
.slide-in-vertically-navbar {
    transition: all 0.25s ease-out;
    max-height: 56px;
    min-height: 56px;
    margin-bottom: 4px;
    opacity: 1;
    overflow: visible;
}

/* Initial state when showing */
.slide-in-vertically-navbar.ng-hide-remove {
    max-height: 0px;
    min-height: 0px;
    //    margin-bottom: 0px;
    overflow: hidden;
}

/* Will transition towards this state */
.slide-in-vertically-navbar.ng-hide-add.ng-hide-add-active {
    max-height: 0px;
    min-height: 0px;
    //    margin-bottom: 0px;
    overflow: hidden;
}

/* Will transition towards this state */
.slide-in-vertically-navbar.ng-hide-remove.ng-hide-remove-active {
    max-height: 56px;
    min-height: 56px;
    //    margin-bottom: 16px;
    overflow: visible;
}

.md-checkbox-no-label {
    margin: 0;
    .md-label {
        margin: 0;
    }
}

.alarms-warning-container {
    //    button {
    //        margin-top: 8px;
    //    }
}

.dashboard-container h1 {
    min-height: 12px;
}

.add-list-item {
    width: 100%;
    height: 100%;
    z-index: 0;
    transition: all 0.3s linear;
    overflow: visible;
    position: fixed;
    background: transparent;
}
/* ... */

